test/data/syntax-errors/no-semicolon.iki
var x: int
var y: int;
